--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -3,6 +3,7 @@
 
 $grey-color:       #828282;
 $theme-color: #ff6f00;
+$about-color: azure;
 
 .icon {
 
@@ -88,6 +89,121 @@ body {
    // padding: 0 $rs * 1;
 //}
 }
+.about-post-content {
+  width: 100%;
+  font-family: $font-serif;
+  color:$about-color;
+  h1, h2, h3 {
+    font-family: $font-sans;
+  }
+  h3, h4, h5, h6 {
+    letter-spacing: -0.02em;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1.3;
+    margin-top: 50px;
+    margin-bottom: 0px;
+    font-family: $font-sans;
+  }
+  h3 {
+    font-size: 36px;
+  }
+  h2, h1 {
+    letter-spacing: -0.02em;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 42px;
+    line-height: 1.2;
+    margin-top: 50px;
+    margin-bottom: 0px;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  table, th, td {
+    border: 1px solid black;
+    padding: 5px;
+    text-align:left;
+  }
+  p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 22px;
+    line-height: 1.59;
+    letter-spacing: -.002em;
+    margin-top: 30px;
+    margin-bottom: 0;
+    color: $about-color;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+  }
+  a {
+    color: $about-color;
+    text-decoration: underline;
+  }
+  amp-img, amp-youtube {
+    margin-top: 30px;
+  }
+  figure {
+    margin: 0;
+    padding: 0 0 30px;
+  }
+  figcaption {
+    font-weight: 400;
+    font-style: italic;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #666665;
+    outline: 0;
+    z-index: 300;
+    text-align: center;
+  }
+  hr {
+    border: 0;
+    padding: 0;
+    display: block;
+    width: 15%;
+    margin: 30px auto;
+    border: 0px solid #dddddd;
+    border-top: 1px solid #dddddd;
+  }
+  blockquote {
+    margin: 0 0 30px;
+    margin-left: -26px;
+    border-left: 3px solid #57ad68;
+    padding-left: 20px;
+    p {
+      letter-spacing: 0.01rem;
+      font-weight: 400;
+      mborder-left: 3px solid #57ad68;
+      mpadding-left: 20px;
+      mmargin-left: -26px;
+      padding-bottom: 3px;
+    }
+  }
+  ul, ol {
+    padding: 0 0 30px;
+    margin: 0;
+  }
+  li {
+    padding: 0;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 23px;
+    line-height: 30px;
+    margin-left: 30px;
+    margin-bottom: 12px;
+    padding-top: 2px;
+    p {
+      padding: 0 0 golden-ratio(1rem, 1);
+    }
+  }
+  ol li {
+    list-style-type: decimal;
+  }
+}
 .about_title {
   margin-top: 5vh;
   text-align: center;
@@ -96,19 +212,22 @@ body {
   font-size: 2em;
   //text-shadow: 0 2px 1px rgba(0, 0, 0, 0.67);
 }
+.rg-icon{
+  fill:$theme-color;
+}
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
   //font-weight: bold;
-  border: 1px solid #f1f1f1;
+  //border: 1px solid #f1f1f1;
   //position: absolute;
   //top: 50%;
   //left: 50%;
   //transform: translate(-50%, -50%);
   //z-index: 2;
   width: 100%;
-  //padding: 20px;
+  padding: 20px;
   //text-align: center;
 }
 .about-staff-section {
